<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".Calculadora">


    <EditText
        android:id="@+id/edtNu2"
        android:layout_width="304dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:hint="@string/number"
        android:inputType="number"
        android:textColor="@color/design_default_color_error"
        android:textColorHint="@color/design_default_color_error"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/edtN1"
        android:layout_width="304dp"
        android:layout_height="80dp"
        android:layout_below="@id/edtNu2"
        android:hint="@string/number"
        android:inputType="number"
        android:textColor="@color/design_default_color_error"
        android:textColorHint="@color/design_default_color_error"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.152"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnSuma"
        android:layout_width="97dp"
        android:layout_height="80dp"
        android:layout_below="@id/edtN1"
        android:onClick="suma"
        android:text="@string/button"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnResta"
        android:layout_width="97dp"
        android:layout_height="80dp"
        android:layout_below="@id/btnSuma"
        android:onClick="resta"
        android:text="@string/button2"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnMultiplicacion"
        android:layout_width="97dp"
        android:layout_height="80dp"
        android:layout_below="@id/btnResta"
        android:onClick="multipliacion"
        android:text="@string/button4"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.866"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnDivision"
        android:layout_width="97dp"
        android:layout_height="80dp"
        android:layout_below="@id/btnMultiplicacion"
        android:onClick="divisioncion"
        android:text="@string/button3"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.828"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.866"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/ltxtResultado"
        android:layout_width="266dp"
        android:layout_height="115dp"
        android:gravity="center"
        android:text="0.0"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />

    <TextView
        android:id="@+id/txtTex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calculdora"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.039" />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="@android:color/holo_red_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976"
        app:srcCompat="?attr/actionModeCloseDrawable" />

</androidx.constraintlayout.widget.ConstraintLayout>